@@ -35,7 +35,7 @@ enum IcccmAtomName {
     WM_STATE, WM_CHANGE_STATE,
     WM_PROTOCOLS, WM_DELETE_WINDOW,
     WM_COLORMAP_WINDOWS, WM_TAKE_FOCUS,
-    WM_WINDOW_ROLE
+    WM_WINDOW_ROLE, WM_CLIENT_MACHINE
 };
 
 // Ewmh Atom Names
@@ -49,7 +49,7 @@ enum EwmhAtomName {
     NET_SUPPORTING_WM_CHECK,
     NET_CLOSE_WINDOW,
     NET_WM_NAME, NET_WM_DESKTOP,
-    NET_WM_STRUT,
+    NET_WM_STRUT, NET_WM_PID,
 
     WINDOW_TYPE,
     WINDOW_TYPE_DESKTOP, WINDOW_TYPE_DOCK,
